external-crates/move/crates/move-compiler/tests/move_2024/parser/invalid_macro_bang_no_args.exp
error[E01002]: unexpected token
  ┌─ tests/move_2024/parser/invalid_macro_bang_no_args.move:3:21
  │
3 │     fun bar() { foo!; }
  │                     ^
  │                     │
  │                     Unexpected ';'
  │                     Expected '('

error[E01002]: unexpected token
  ┌─ tests/move_2024/parser/invalid_macro_bang_no_args.move:3:21
  │
3 │     fun bar() { foo!; }
  │                     ^
  │                     │
  │                     Unexpected ';'
  │                     Expected a module member: 'spec', 'use', 'friend', 'const', 'fun', or 'struct'

