external-crates/move/crates/move-compiler/tests/move_2024/parser/invalid_macro_bang_no_args.move
module a::m {
    macro fun foo<$T>($x: $T): $T { $x }
    fun bar() { foo!; }
}
